--- a/showNN.html
+++ b/showNN.html
@@ -28,10 +28,15 @@
 </head>
 
 <body onload="createNN(), getNumberOfNodes()">
-    <span id="inputs"></span>
-    <span>
-        <svg id="dataviz_area" height=500 width=500></svg>
-    </span>
+    <div>
+        <span id="inputs"></span>
+        <span>
+            <svg id="dataviz_area" height=500 width=500></svg>
+        </span>
+    </div>
+    <div id="runNetwork">
+        <button id="forward" onclick="forwardNetwork()">Forward</button>
+    </div>
 </body>
 
 </html>
