--- a/showNN.html
+++ b/showNN.html
@@ -7,6 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.5/d3.min.js"></script>
+    <script src="MathFunctions.js"></script>
     <script src="NN.js"></script>
 
     <style>
