--- a/showNN.html
+++ b/showNN.html
@@ -31,15 +31,15 @@
 <body onload="createNN(), getNumberOfNodes()">
     <div>
         <span id="inputs"></span>
-        <span>
-            <svg id="dataviz_area" height=400 width=500></svg>
-        </span>
+        
+            <svg id="dataviz_area" height=600 width=800></svg>
+     
     </div>
     <div id="runNetwork">
         <button id="forward" onclick="forward()">Forward</button>
-        <button id="forwardTraining" onclick="forwardNetwork()">Forward Training Data</button>
+
         <button id="pushTrainingData" onclick="pushTrainingData()">Push Traning Data</button>
-        <button id="backPropagate" onclick="backpropagationLoop()">Backpropagation</button>
+        <button id="backPropagate" onclick="trainNetwork()">Backpropagation</button>
         <span id="trainingInputs"></span>
         <textarea id="trainingInputsText"></textarea>
         <textarea id="trainingOutputsText"></textarea>
