--- a/showNN.html
+++ b/showNN.html
@@ -6,40 +6,31 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
+    <script>let nn;
+        var svg;
+        var paddingNodes;
+        var paddingHidden;
+        var paddingInput;
+        var paddingOutput;
+        var paddingLayers;
+    </script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.5/d3.min.js"></script>
     <script src="MathFunctions.js"></script>
     <script src="NN.js"></script>
-
-    <style>
-        text {
-            pointer-events: none;
-        }
-
-        .node:hover {
-            stroke: #999;
-            stroke-opacity: .6;
-            stroke-width: 4px;
-        }
-
-        .link {
-            stroke: #999;
-            stroke-opacity: .6;
-        }
-    </style>
+    <script src="NNVisualization.js"></script>
+    <script src="TrainingDataExample.js"></script>
 </head>
 
 <body onload="createNN(), getNumberOfNodes()">
     <div>
         <span id="inputs"></span>
-        
-            <svg id="dataviz_area" height=600 width=800></svg>
-     
+        <svg id="dataviz_area" height=600 width=800></svg>
     </div>
     <div id="runNetwork">
         <button id="forward" onclick="forward()">Forward</button>
-
         <button id="pushTrainingData" onclick="pushTrainingData()">Push Traning Data</button>
         <button id="backPropagate" onclick="trainNetwork()">Backpropagation</button>
+        <button onclick="setTrainingData()">set training data</button>
         <span id="trainingInputs"></span>
         <textarea id="trainingInputsText"></textarea>
         <textarea id="trainingOutputsText"></textarea>
