--- a/showNN.html
+++ b/showNN.html
@@ -34,7 +34,13 @@
         <span id="trainingInputs"></span>
         <textarea id="trainingInputsText"></textarea>
         <textarea id="trainingOutputsText"></textarea>
+        
     </div>
+    <textarea id="createInputs">2</textarea>
+    <textarea id="createHiddens">6</textarea>
+    <textarea id="createOutputs">4</textarea>
+    <textarea id="createLayers">3</textarea>
+    <button onclick="createNN2()">create NN</button>
     <div>
         <textarea id="error">error</textarea>
     </div>
