Good to go now!

--- a/showNN.html
+++ b/showNN.html
@@ -44,6 +44,11 @@
     <div>
         <textarea id="error">error</textarea>
     </div>
+    <div>
+        <input id="batchSize" type="text" name="batch size" className="css-class-name" size="2">batch size</input>
+        <input id="rows" type="text" name="rows" className="css-class-name" size="2">rows</input>
+        <button onclick="train()">Train</button>
+    </div>
 </body>
 
 </html>
