Network was slow cause of SVG.
Fixed

--- a/showNN.html
+++ b/showNN.html
@@ -21,7 +21,7 @@
     <script src="TrainingDataExample.js"></script>
 </head>
 
-<body onload="createNN(), getNumberOfNodes()">
+<body onload="createNN(), drawGraph()">
     <div>
         <span id="inputs"></span>
         <svg id="dataviz_area" height=600 width=800></svg>
