--- a/olles.html
+++ b/olles.html
@@ -8,7 +8,7 @@
     <title>Document</title>
     <script src="NN.js"></script>
     <script src="MathFunctions.js"></script>
-    <script src="ollehs.js"></script>
+    <script src="olles.js"></script>
     <script>
     </script>
 </head>
