--- a/olles.html
+++ b/olles.html
@@ -29,6 +29,10 @@
         <textarea id="error">Error value</textarea>
    </div>
 
+   <div>
+       <h2>methods to train the network with stored data:</h2>
+    </div>
+
 </body>
 
 </html>
