Able to stringify Network

--- a/showNN.html
+++ b/showNN.html
@@ -49,6 +49,10 @@
         <input id="rows" type="text" name="rows" className="css-class-name" size="2">rows</input>
         <button onclick="train()">Train</button>
     </div>
+    <div>
+        <button onclick="save()">Save Network</button>
+        <button onclick="load(), drawGraph()"> Load Network</button>
+    </div>
 </body>
 
 </html>
